Controller, fork and programState update to work properly